--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,14 @@ dependencies:
   riverpod: ^2.5.1
   hooks_riverpod: ^2.5.1
   collection: ^1.18.0
+  equatable: ^2.0.3
+  flutter_bloc: ^8.0.1
+  bloc: ^8.1.0
+  shared_preferences: ^2.0.0
+  bloc_test: ^9.1.7
+  mockito: ^5.4.4
+  mocktail: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
